[tool.poetry]
name = "prettynum"
version = "0.1.0"
description = "Simple number formatting for python"
authors = ["SamEdwardes <edwardes.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
